// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencySetting matches original component 1`] = `
<DocumentFragment>
  <div
    class="grid"
    style="gap: 8px;"
  >
    <div
      class="wrapper search search__small"
      style="margin: 0px;"
    >
      <input
        autocomplete="off"
        class="input input__small"
        inputmode="search"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <div
      class="wrapper"
    >
      <section
        class="selector"
      >
        <div
          class="accordion"
        >
          <button
            class="item"
          >
            <div
              class="icons_container"
            >
              <div>
                ¥ - Japanese Yen
              </div>
            </div>
            <div
              class="flex track"
            >
              <span
                class="indicator"
              />
            </div>
          </button>
          <div
            class="content"
          />
        </div>
        <div
          class="accordion"
        >
          <button
            class="item"
          >
            <div
              class="icons_container"
            >
              <div>
                ₦ - Nigerian Naira
              </div>
            </div>
            <div
              class="flex track"
            >
              <span
                class="indicator"
              />
            </div>
          </button>
          <div
            class="content"
          />
        </div>
        <div
          class="accordion"
        >
          <button
            class="item"
          >
            <div
              class="icons_container"
            >
              <div>
                $ - United States Dollar
              </div>
            </div>
            <div
              class="flex track"
            >
              <span
                class="indicator checked"
              />
            </div>
          </button>
          <div
            class="content"
          />
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrencySetting matches user augmented component 1`] = `
<DocumentFragment>
  <div
    class="grid"
    style="gap: 8px;"
  >
    <div
      class="wrapper search search__small"
      style="margin: 0px;"
    >
      <input
        autocomplete="off"
        class="input input__small"
        inputmode="search"
        value="JPY"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium icon css-i4bv87-MuiSvgIcon-root"
        data-testid="SearchIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
    </div>
    <div
      class="wrapper"
    >
      <section
        class="selector"
      >
        <div
          class="accordion"
        >
          <button
            class="item"
          >
            <div
              class="icons_container"
            >
              <div>
                ¥ - Japanese Yen
              </div>
            </div>
            <div
              class="flex track"
            >
              <span
                class="indicator"
              />
            </div>
          </button>
          <div
            class="content"
          />
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
